# ngo-impact-modeling

./: README.md  docker-compose.test.yaml  docker-compose.yaml
.github/workflows/: main.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/data/: gen_data.py
app/src/mecklenburg/: main.py
app/src/mecklenburg/analysis/: __init__.py  analysis.py
app/src/mecklenburg/aws/: setup.py  upload_data.py
app/src/mecklenburg/config/: analysis.yaml  aws.yaml  gen-data.yaml
app/src/mecklenburg/data/: gen_data.py
app/src/mecklenburg/model/: gen_fit.py  model.stan
app/src/mecklenburg/workflows/: synthetic_modeling.py
app/src/meklenburg/config/: gen-data.yaml
app/src/meklenburg/data/: gen_data.py
app/src/test/: test_analysis.py  test_aws.py  test_data.py  test_model.py
scripts/: requirements.txt
scripts/upload_to_rds/: upload_to_rds.py
