[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mecklenburg"
version = "0.0.1"
authors = [
  {name = "Bear Jordan", email = "bearjordan@gmail.com"},
]
description = "Statistical Analysis for the Mecklenburg Democratic Party"

[project.scripts]
main = "mecklenburg.main:main"

[project.urls]
"Homepage" = "https://github.com/bear-jordan/bbd-mecklenburg"

[tool.hatch.data]
include = [
  "mecklenburg/config/gen_data.yaml",
  "mecklenburg/model/model.stan",
]
